Updated via CMS: manifest.json

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "विझंणे ग्रामपंचायत, चंदगड",
-  "short_name": "विझंणे ग्राम...",
+  "name": "विंझणे ग्रामपंचायत, चंदगड",
+  "short_name": "विंझणे ग्राम...",
   "start_url": "./index.html",
   "display": "standalone",
   "background_color": "#ffffff",
